Random enemy generator

--- a/fps.Game.csproj
+++ b/fps.Game.csproj
@@ -43,6 +43,7 @@
      <Compile Include="Assets\FPS\Scripts\Game\Shared\Objective.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\Managers\ActorsManager.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\Shared\Damageable.cs" />
+     <Compile Include="Assets\FPS\Scripts\Game\Managers\EnemyGenerator.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\Managers\EventManager.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\Managers\AudioManager.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\MeshCombineUtility.cs" />
@@ -50,6 +51,7 @@
      <Compile Include="Assets\FPS\Scripts\Game\IgnoreHitDetection.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\PrefabReplacer.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\Shared\WeaponController.cs" />
+     <Compile Include="Assets\FPS\Scripts\Game\Managers\TimeManager.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\Actor.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\ConstantRotation.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\GameConstants.cs" />
@@ -62,7 +64,6 @@
      <Compile Include="Assets\FPS\Scripts\Game\IgnoreHeatMap.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\Shared\Destructable.cs" />
      <Compile Include="Assets\FPS\Scripts\Game\Shared\ProjectileBase.cs" />
-     <Compile Include="Assets\FPS\Scripts\Game\Managers\TimeManager.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.3.16f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
